--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+
+html {
+  font-size: 72.5%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2rem;
+  
+   
+  background-image: url("SW-028.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+}
