--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,31 @@
-111
+<main id="main">
+  <header id="masterhead">
+    <h1>Шапка сайта</h1>
+  </header>
+  <section id="content">
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    </article>
+  </section>
+</main>
