--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -70,35 +70,39 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 html {
-  font-size: 112.5%;
-  line-height: 1.55556em;
+  font-size: 137.5%;
+  line-height: 1.5em;
 }
 
-p.img.iframe {
-  margin-bottom: 28px;
-  margin-bottom: 1.55556rem;
+img, iframe {
+  margin: auto;
+  display: block;
+  max-width: 100%;
+  margin-bottom: 33px;
+  margin-bottom: 1.5rem;
 }
 
 h1, h2 {
+  font-weight: 700;
   color: #eee;
   font-size: 24px;
-  font-size: 1.33333rem;
-  line-height: 28px;
-  line-height: 1.55556rem;
-  margin-top: 28px;
-  margin-top: 1.55556rem;
+  font-size: 1.09091rem;
+  line-height: 33px;
+  line-height: 1.5rem;
+  margin-top: 33px;
+  margin-top: 1.5rem;
 }
 
 p {
-  margin-bottom: 28px;
-  margin-bottom: 1.55556rem;
+  margin-bottom: 33px;
+  margin-bottom: 1.5rem;
 }
 
 .article p {
   font-size: 24px;
-  font-size: 1.33333rem;
-  line-height: 28px;
-  line-height: 1.55556rem;
+  font-size: 1.09091rem;
+  line-height: 33px;
+  line-height: 1.5rem;
 }
 
 html {
@@ -112,7 +116,7 @@ body {
 
 #main {
   max-width: 960px;
-  max-width: 53.33333rem;
+  max-width: 43.63636rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -159,7 +163,7 @@ head:hover ~ #main:before, head:hover ~ body #main:before {
   background-image: -moz-linear-gradient(left, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), -moz-linear-gradient(top, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
   background-image: -webkit-linear-gradient(left, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), -webkit-linear-gradient(top, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
   background-image: linear-gradient(to right, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), linear-gradient(to bottom, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
-  background-size: 10%, 100% 28px;
+  background-size: 10%, 100% 33px;
   background-origin: content-box, border-box;
   background-clip: content-box, border-box;
   background-position: left top;
