--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
     <article class="entry">
       <h2 class="entry-title">Entry 1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+       <img src="http://lorempixel.com/800/500">
     </article>
     <article class="entry">
       <h2 class="entry-title">Entry 1</h2>
