--- a/app/assets/stylesheets/_grids.scss
+++ b/app/assets/stylesheets/_grids.scss
@@ -1,4 +1,8 @@
+@import "compass";
+@import "compass/reset";
 
+@import "compass/typography";
+@import "compass/typography/vertical_rhythm";
 @import "susy";
 
 
@@ -15,14 +19,61 @@ $susy: (
     color: rgba(#66f, .5),
     output: overlay,
     toggle: top right,
-    )
-  );
+  )
+);
+
+$base-font-size: 16px !global;
+$base-line-height: 24px !global;
+$rhythm-unit: "rem" !global;
+$grid-background-baseline-color: white;
+$rem-with-px-fallback: true !global;
+@include establish-baseline;
+
+
+@include susy-media(50em) {
+  
+  $base-font-size: 22px !global;
+  $base-line-height: 30px !global;
+  $rhythm-unit: "rem" !global;
+  $grid-background-baseline-color: white;
+  $rem-with-px-fallback: true !global;
+  @include establish-baseline;
+}
+
+
+ 
+
+
+
+
+img, iframe {
+  margin: auto;
+  display: block;
+  max-width: 100%;
+  @include margin-trailer;
+}
+
+
+h1, h2 {
+  font-weight: 700;
+  color: #eee;
+   
+  @include margin-leader(1);
+ 
+}
+
+p {
+ 
+  @include margin-trailer(1);
+}
+
+.article p {
+   
+}
 
 #main {
-  @include container(960px);
-  @media screen and (max-width: 960px) {
-    margin: 0;
-  }
+  @include container();
+  
 }
 
 
@@ -41,7 +92,7 @@ $susy: (
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 25px;
+     
     text-transform: uppercase;
     text-shadow: 0 0 10px white;
   }
