--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -70,42 +70,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 html {
-  font-size: 137.5%;
-  line-height: 1.5em;
-}
-
-img, iframe {
-  margin: auto;
-  display: block;
-  max-width: 100%;
-  margin-bottom: 33px;
-  margin-bottom: 1.5rem;
-}
-
-h1, h2 {
-  font-weight: 700;
-  color: #eee;
-  font-size: 24px;
-  font-size: 1.09091rem;
-  line-height: 33px;
-  line-height: 1.5rem;
-  margin-top: 33px;
-  margin-top: 1.5rem;
-}
-
-p {
-  margin-bottom: 33px;
-  margin-bottom: 1.5rem;
-}
-
-.article p {
-  font-size: 24px;
-  font-size: 1.09091rem;
-  line-height: 33px;
-  line-height: 1.5rem;
-}
-
-html {
   height: 100%;
 }
 
@@ -114,9 +78,39 @@ body {
   font-family: "Verdana", Georgia, serif;
 }
 
+html {
+  font-size: 100%;
+  line-height: 1.5em;
+}
+
+@media (min-width: 50em) {
+  html {
+    font-size: 137.5%;
+    line-height: 1.36364em;
+  }
+}
+img, iframe {
+  margin: auto;
+  display: block;
+  max-width: 100%;
+  margin-bottom: 30px;
+  margin-bottom: 1.36364rem;
+}
+
+h1, h2 {
+  font-weight: 700;
+  color: #eee;
+  margin-top: 30px;
+  margin-top: 1.36364rem;
+}
+
+p {
+  margin-bottom: 30px;
+  margin-bottom: 1.36364rem;
+}
+
 #main {
-  max-width: 960px;
-  max-width: 43.63636rem;
+  max-width: 60em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -163,15 +157,10 @@ head:hover ~ #main:before, head:hover ~ body #main:before {
   background-image: -moz-linear-gradient(left, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), -moz-linear-gradient(top, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
   background-image: -webkit-linear-gradient(left, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), -webkit-linear-gradient(top, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
   background-image: linear-gradient(to right, rgba(102, 102, 255, 0.5), rgba(179, 179, 255, 0.5)), linear-gradient(to bottom, #ffffff 1px, rgba(0, 0, 0, 0) 1px);
-  background-size: 10%, 100% 33px;
+  background-size: 10%, 100% 30px;
   background-origin: content-box, border-box;
   background-clip: content-box, border-box;
   background-position: left top;
-}
-@media screen and (max-width: 960px) {
-  #main {
-    margin: 0;
-  }
 }
 
 #masterhead {
@@ -219,7 +208,6 @@ head:hover ~ #main:before, head:hover ~ body #main:before {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 25px;
   text-transform: uppercase;
   text-shadow: 0 0 10px white;
 }
