--- a/app/assets/stylesheets/_grids.scss
+++ b/app/assets/stylesheets/_grids.scss
@@ -1,10 +1,10 @@
 @import "compass";
 @import "compass/reset";
-
+@import "compass/css3";
 @import "compass/typography";
 @import "compass/typography/vertical_rhythm";
 @import "susy";
-
+@import "compass/layout/grid-background";
 
 $susy: (
   columns: 10,
@@ -13,14 +13,27 @@ $susy: (
   math: fluid,
   output: float,
   gutter-position: inside,
-
-  debug: (
-    image: show,
-    color: rgba(#66f, .5),
-    output: overlay,
-    toggle: top right,
-  )
 );
+
+
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  font-family: "Verdana", Georgia, serif;
+}
+
+#main {
+  @include container();
+}
+
+.main {
+    @include debug-vertical-alignment;
+}
+
 
 $base-font-size: 16px !global;
 $base-line-height: 24px !global;
@@ -31,9 +44,8 @@ $rem-with-px-fallback: true !global;
 
 
 @include susy-media(50em) {
-  
   $base-font-size: 22px !global;
-  $base-line-height: 30px !global;
+  $base-line-height: 33px !global;
   $rhythm-unit: "rem" !global;
   $grid-background-baseline-color: white;
   $rem-with-px-fallback: true !global;
@@ -71,10 +83,6 @@ p {
    
 }
 
-#main {
-  @include container();
-  
-}
 
 
 #masterhead {
