--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -188,12 +188,18 @@ p {
   font-size: 1.90909rem;
   line-height: 66px;
   line-height: 3rem;
+  -moz-border-radius: 6px / 6px;
+  -webkit-border-radius: 6px 6px;
+  border-radius: 6px / 6px;
+  -moz-box-shadow: black 2px 2px 10px;
+  -webkit-box-shadow: black 2px 2px 10px;
+  box-shadow: black 2px 2px 10px;
   text-align: center;
   background-color: #ccc;
   width: 50px;
   height: 50px;
-  position: absolute;
-  top: 100px;
-  right: 100px;
-  opacity: 0.5;
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  opacity: 0.3;
 }
