--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,22 +16,26 @@
 
 @import "compass";
 @import "compass/reset";
+@import "compass/css3/animation";
 @import "susy";
 @import "typography";
 @import "base";
 @import "grids";
-
+$default-box-shadow-color: #999999;
 //div-js toggle for debug
 .clickme {
   @include adjust-font-size-to(42px);
+  @include border-radius(6px, 6px);
+  @include box-shadow(black 2px 2px 10px);                                  
   text-align: center;
   background-color: #ccc;
   width: 50px;
   height: 50px;
-  position: absolute;
-  top:100px;
-  right:100px;
-  opacity: 0.5;
+  position: fixed;
+  top:50px;
+  right:50px;
+  opacity: 0.3;
+
 }
 //end
 
