--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,27 +16,36 @@
 
 @import "compass";
 @import "compass/reset";
-@import "compass/css3/animation";
+@import "compass/css3";
 @import "susy";
 @import "typography";
 @import "base";
 @import "grids";
+@import "compass/css3/transform";
+
 $default-box-shadow-color: #999999;
 //div-js toggle for debug
-.clickme {
+#clickme {
   @include adjust-font-size-to(42px);
   @include border-radius(6px, 6px);
-  @include box-shadow(black 2px 2px 10px);                                  
+  @include box-shadow(black 2px 2px 10px);  
+  //@include transition-property(all); 
+ // @include transition-duration(040s);  
+  //@include transition-timing-function(ease-out); 
+  &:hover {
+    @include scale(1.2,1.2);
+  }                           
   text-align: center;
   background-color: #ccc;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   position: fixed;
   top:50px;
   right:50px;
   opacity: 0.3;
-
 }
+
+
 //end
 
 
