--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
     <script src="http://localhost:35729/livereload.js"></script>
     <!-- end -->
   </head>
+  <main id="main"  class="main">
+  <header id="masterhead">
+    <div id="logo">логотип</div>
+    <div id="contactsviget">Контакты</div>
+     
+  </header>
 
   <body>
 
