--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
   <header id="masterhead">
     <div id="logo">логотип</div>
     <div id="contactsviget">Контакты</div>
+
      
   </header>
+  <div id="grass">трава</div>
 
   <body>
 
