--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -135,6 +135,7 @@ p {
 }
 
 #masterhead {
+  display: flex;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -142,7 +143,6 @@ p {
   float: left;
   padding-left: 1%;
   padding-right: 1%;
-  background: rgba(0, 128, 0, 0.7);
   height: 168px;
 }
 @media (min-width: 50em) {
@@ -159,7 +159,6 @@ p {
   float: left;
   padding-left: 1%;
   padding-right: 1%;
-  background: rgba(255, 0, 0, 0.7);
   background-image: url(logo21.png);
   background-repeat: no-repeat;
   margin-bottom: 33px;
@@ -171,10 +170,23 @@ p {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 60%;
-  float: left;
+  float: right;
   padding-left: 1%;
   padding-right: 1%;
   background: rgba(0, 0, 255, 0.7);
+}
+
+#grass {
+  background-image: url(grass.jpg);
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+  background-color: #ccc;
+  height: 48px;
 }
 
 #content {
