--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
-  <section id="content">
+  <section id="content"   class="debug">
     <article class="entry">
       <h2 class="entry-title">Entry 1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
@@ -27,5 +27,14 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
       <img src="http://lorempixel.com/600/350">
     </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+      <img src="http://lorempixel.com/600/270">
+    </article>
+    <article class="entry">
+      <h2 class="entry-title">Entry 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+      <img src="http://lorempixel.com/600/420">
+    </article>
   </section>
-</main>
