--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
     <script src="http://localhost:35729/livereload.js"></script>
     <!-- end -->
   </head>
-  <main id="main"  class="main">
+  
+
+  <body>
+  <main id="main">
   <header id="masterhead">
     <div id="logo">логотип</div>
     <div id="contactsviget">Контакты</div>
@@ -20,9 +23,8 @@
   <div id="grass">трава</div>
   <menu id="mainmenu"></menu>
 
-  <body>
-
     <%= yield %>
+    </main>
   </body>
 </html>
  
