--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
       <header id="masterhead">
         <div id="logo">логотип</div>
         <div id="contactsviget">Контакты</div>
+        <div id="grass"></div>
       </header>
-      <div id="grass">трава</div>
+      
       <menu id="mainmenu"></menu>
       <%= yield %>
     </main>
