--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,22 +1,4 @@
-@import "compass";
-@import "compass/reset";
-@import "compass/css3";
-@import "compass/typography";
-@import "compass/typography/vertical_rhythm";
-@import "susy";
-@import "compass/layout/grid-background";
-
-$line1: 14px;
-$line2: 18px;
-$line3: 24px;
-$grid-background-baseline-color: lighten(#D72272, 30%) !global;
-
-@mixin uwd-rhytm-config($size) {
-  $base-font-size: $size !global;
-  $base-line-height: $size * 1.5 !global;
-  $rhythm-unit: "rem" !global;
-  $rem-with-px-fallback: true !global;
-}
+@import "variables";
 
 .debug {
   @include debug-vertical-alignment;
