--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -140,9 +140,34 @@ html {
   }
 }
 #masterhead {
-  display: flex;
+  position: relative;
   background-image: url("SW-028.jpg");
-  background-size: cover;
+  background-repeat: no-repeat;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  height: 144px;
+}
+@media (min-width: 769) {
+  #masterhead {
+    height: 108px;
+  }
+}
+@media (min-width: 1500) {
+  #masterhead {
+    height: 84px;
+  }
+}
+
+#grass {
+  background-image: url(grass.png);
+  background-repeat: repeat-x;
+  background-position: 0px -2px;
+  border-bottom-color: orange;
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -150,16 +175,21 @@ html {
   float: left;
   padding-left: 1%;
   padding-right: 1%;
-  height: 84px;
+  position: absolute;
+  bottom: 0;
+  background-size: contain;
+  height: 42px;
 }
-@media (min-width: 769px) {
-  #masterhead {
-    height: 108px;
+@media (min-width: 47em) {
+  #grass {
+    background-size: contain;
+    height: 36px;
   }
 }
-@media (min-width: 1500px) {
-  #masterhead {
-    height: 144px;
+@media (min-width: 75em) {
+  #grass {
+    background-size: contain;
+    height: 48px;
   }
 }
 
@@ -186,31 +216,6 @@ html {
   padding-right: 1%;
 }
 
-#grass {
-  border-radius: 0px 0px 6px 6px;
-  background-image: url(grass-01.svg);
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  float: left;
-  padding-left: 1%;
-  padding-right: 1%;
-  background-position: center bottom;
-  background-size: contain;
-  height: 21px;
-}
-@media (min-width: 769px) {
-  #grass {
-    border-radius: 0px 0px 10px 10px;
-  }
-}
-@media (min-width: 50em) {
-  #grass {
-    height: 27px;
-  }
-}
-
 #mainmenu {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -235,16 +240,10 @@ html {
   float: left;
   padding-left: 1%;
   padding-right: 1%;
-  border-radius: 0px 0px 6px 6px;
   height: 100%;
   box-shadow: 0 0 15px dimgray;
   background-color: dimgray;
   opacity: 0.7;
-}
-@media (min-width: 769px) {
-  #content {
-    border-radius: 0px 0px 10px 10px;
-  }
 }
 
 #clickme {
