--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,22 @@
   <body>
     <main id="main">
       <header id="masterhead">
-        <div id="logo">логотип</div>
-        <div id="contactsviget">Контакты</div>
+        <div id="logo"></div>
+        <div id="contactsviget">
+           
+                   
+                <b>Адрес электронной почты:</b><br /> impuls-psy@mail.ru
+                </div>                                                   
+
+                <div class="contacts">
+                <b>Контакты:</b><br>
+                Тел.: 8 912 699 25 54
+                <br>
+                Адрес: г. Верхняя Пышма,
+                <br>
+                проспект Успенский 125, офис 208
+                 
+        </div>
         <div id="grass"></div>
       </header>
       
