--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,17 @@
 
 <section id="content"   class="debug">
   <article class="entry">
+    
+    <h1 class="entry-title">Entry h1</h1>
+    <h2 class="entry-title">Entry h2</h2>
+    <h3 class="entry-title">Entry h3</h3>
+    <h4 class="entry-title">Entry h4</h4>
+    <h5 class="entry-title">Entry h5</h5>
+    <h6 class="entry-title">Entry h6</h6>
+    <h6 class="entry-title">Entry h6</h6> 
+    <h4 class="entry-title">Entry h4</h4>
+    <h1 class="entry-title">Entry h1</h1>
+
     <h2 class="entry-title">Entry 1</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
   </article>
@@ -19,7 +30,7 @@
     <img src="http://lorempixel.com/600/500">
   </article>
   <article class="entry">
-    <h2 class="entry-title">Entry 1</h2>
+    <h1 class="entry-title">Entry h1</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
   </article>
   <article class="entry">
@@ -28,6 +39,16 @@
     <img src="http://lorempixel.com/600/350">
   </article>
   <article class="entry">
+    <h2 class="entry-title">Entry 1</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    <img src="http://lorempixel.com/600/270">
+  </article>
+  <article class="entry">
+    <h2 class="entry-title">Entry 1</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
+    <img src="http://lorempixel.com/600/420">
+  </article>
+    <article class="entry">
     <h2 class="entry-title">Entry 1</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ab dolorum nesciunt eius porro, blanditiis deserunt facere minus quae totam architecto ea hic, explicabo temporibus unde cumque veniam eveniet aspernatur.</p>
     <img src="http://lorempixel.com/600/270">
