--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,25 +12,40 @@
   </head>
   <body>
     <main id="main">
-      <header id="masterhead">
-        <div id="logo"></div>
-        <div id="contactsviget">
-           
-                   
-                <b>Адрес электронной почты:</b><br /> impuls-psy@mail.ru
-                </div>                                                   
+     <div id="bgimage">
+        <header id="masterhead">
+          <div id="logo"></div>
+          <div id="contactsviget">
+             
+                  <div>   
+                  <h6>Адрес электронной почты:</h6><br /> impuls-psy@mail.ru
+                  </div>                                                   
 
-                <div class="contacts">
-                <b>Контакты:</b><br>
-                Тел.: 8 912 699 25 54
-                <br>
-                Адрес: г. Верхняя Пышма,
-                <br>
-                проспект Успенский 125, офис 208
-                 
-        </div>
-        <div id="grass"></div>
-      </header>
+                  <div class="contacts">
+                  Контакты:<br>
+                  Тел.: 8 912 699 25 54
+                  <br>
+                  Адрес: г. Верхняя Пышма,
+                  <br>
+                  проспект Успенский 125, офис 208
+                  </div> 
+          </div>
+          <div id="grass"></div>
+          
+        </header>
+      </div><!--bgimage-->
+
+      <div class="navigation">
+            <section class="layout">
+              <ul class="nav">
+                <li><a href="#"><i class="icon-home"></i>Home</a></li>
+                <li><a href="#"><i class="icon-question-sign"></i>About us</a></li>
+                <li><a href="#"><i class="icon-user"></i>Speakers</a></li>
+                <li><a href="#"><i class="icon-heart"></i>Sponsors</a></li>
+                <li><a href="#"><i class="icon-keyboard"></i>Contact us</a></li>
+              </ul>
+            </section><!-- layout -->
+      </div><!-- navigation -->
       
       <menu id="mainmenu"></menu>
       <%= yield %>
