--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
                   </div>                                                   
 
                   <div class="contacts">
-                  Контакты:<br>
+                  <h6>Контакты:</h6><br>
                   Тел.: 8 912 699 25 54
                   <br>
                   Адрес: г. Верхняя Пышма,
