--- a/app/assets/stylesheets/application.css.css
+++ b/app/assets/stylesheets/application.css.css
@@ -143,7 +143,7 @@ img, iframe {
   margin-bottom: 1.5rem;
 }
 
-h1, h2, h3, h4, h5, h6, h7, h8 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   margin-top: 24px;
   margin-top: 1.5rem;
@@ -197,7 +197,6 @@ p {
 }
 
 #bgimage {
-  background-color: #ada;
   background-repeat: no-repeat;
   background-position: center top;
   background-image: url("sw028.jpg");
@@ -219,11 +218,11 @@ p {
   box-sizing: border-box;
   width: 100%;
   float: left;
-  height: 266px;
+  height: 308px;
 }
 @media (min-width: 47em) {
   #masterhead {
-    height: 144px;
+    height: 192px;
   }
 }
 @media (min-width: 75em) {
@@ -302,11 +301,11 @@ p {
 }
 
 #contactsviget {
-  display: flex;
   font-size: 13px;
   font-size: 0.8rem;
   line-height: 16px;
   line-height: 1rem;
+  display: flex;
   text-align: right;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -316,10 +315,25 @@ p {
   padding-left: 1%;
   padding-right: 1%;
 }
+#contactsviget h6 {
+  font-size: 12px;
+  font-size: 0.75rem;
+  line-height: 16px;
+  line-height: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: -0.7rem;
+}
 #contactsviget div {
-  padding: 20px;
+  padding: 0 0.8rem;
+}
+@media (min-width: 0em) and (max-width: 30em) {
+  #contactsviget {
+    padding: 0;
+    flex-direction: column;
+  }
 }
 #contactsviget .contacts {
+  background-color: #ada;
   border-left: 2px;
   text-align: left;
 }
